# psutils

./: meson.build
include/psutils/: psutils.h
lib/: meson.build  psutils.c  util.h
lib/sysdeps/: astral.c  sysdeps.h
programs/: meson.build
programs/pgrep/: main.c  meson.build  options.c  options.h  process.c  process.h
programs/pkill/: main.c  meson.build  options.c  options.h  process.c  process.h
programs/ps/: main.c  meson.build  options.c  options.h  print.c  print.h  process.c  process.h
